Version 2.3.6 * Database reading forwards peptide coverage to result csv-file * mzIdentML import/export posibility to only consider matches flagged as passing * dedicated csv output for xiFDR * CSV input without individual petide scores:changed how CSM score gets distributed to proteins\n\ * Bugfix: mzIdentML export with newer java versions * Bugfix: odd unicode error with NaN and infinite * Bugfix: mzIdentML export with newer java-versions * Bugfix: database reading with no crosslinker * Bugfix: iFDR at last element turns negative * Bugfix: summary-file protein group FDR setting was wrongly reported\n\